# _hideout

./: .config.yaml.example  .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/src/: handlers.rs  lib.rs  main.rs
app/src/controllers/: articles.rs  assets.rs  images.rs  mod.rs  root.rs  session.rs
app/src/controllers/dailies/: mod.rs
app/src/controllers/private/: mod.rs  workouts.rs
app/src/models/: daily.rs  daily_activity.rs  mod.rs  session.rs  user.rs  workout.rs
app/tests/: model_basic.rs
bootstrap/: Cargo.toml
bootstrap/src/: fixture.rs  main.rs
config/: config.example.yaml  fixture.example.yaml
core/: Cargo.toml
core/src/: lib.rs
core/src/http/: form_data.rs  mod.rs  request.rs  status.rs
core/src/router/: debug.rs  mod.rs
core/src/util/: asset_store.rs  config.rs
frontend/: Cargo.toml
frontend/src/: main.rs
hideout/: Cargo.toml
hideout/src/: lib.rs
hideout/src/context/: mod.rs  server_state.rs  session_store.rs
hideout/src/http/: cookie.rs  form_data.rs  mod.rs  request.rs  response.rs  uri.rs
hideout/src/model/: mod.rs
hideout/src/router/: debug.rs
hideout/src/util/: asset_store.rs  config.rs  logger.rs  mod.rs  password.rs  rc_string.rs  uuid.rs
src/: handler.rs  main.rs
src/http/: mod.rs  request.rs  response.rs  status.rs
src/router/: builder.rs  mod.rs
src/util/: config.rs
