[package]
name = "hideout"
version = "0.1.0"
authors = ["inkyu <gofiri@gmail.com>"]
edition = "2018"

[dependencies]
dope = {path = "../dope"}
html = {path = "deps/html"}
html_macro = {path = "deps/html-macro"}

futures = "*"
chrono = "*"
color-backtrace = { version = "*", features = ["failure-bt"] }
failure = "*"
log = "*"
nom = "*"