[package]
name = "hideout"
version = "0.1.0"
authors = ["inkyu <gofiri@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "*", features = ["io-util", "macros", "rt-core", "stream", "tcp"] }
futures = "*"
chrono = "*"
color-backtrace = { version = "*", features = ["failure-bt"] }
failure = "*"
log = "*"
nom = "*"
tent = {path = "../tent"}
lazy_static = "*"
