[package]
name = "hideout"
version = "0.1.0"
authors = ["inkyu <gofiri@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "*"
color-backtrace = { version = "*", features = ["failure-bt"] }
failure = "*"
futures = "*"
lazy_static = "*"
log = "*"
nom = "*"
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
tent = "*"
tokio = { version = "*", features = ["io-util", "macros", "rt-core", "stream", "tcp"] }

