[package]
name = "app"
version = "0.1.0"
authors = ["inkyu <gofiri@gmail.com>"]
edition = "2018"

[dependencies]
bson = "*"
bytes = "*"
color-backtrace = { version = "*", features = ["failure-bt"] }
hideout = { path = "../hideout" }
lazy_static = "*"
log = "*"
serde = "*"
tent = "*"
uuid = "*"
tokio = { version = "*", features = ["io-util", "rt-core", "rt-util", "stream", "tcp"] }

[dependencies.mongodb]
version = "*"
default-features = false
features = ["tokio-runtime"]

[dev-dependencies]
tokio = { version = "*", features = ["io-util", "macros", "rt-core", "rt-util", "stream", "tcp"] }
futures = "*"