[package]
name = "app"
version = "0.1.0"
authors = ["inkyu <gofiri@gmail.com>"]
edition = "2018"

[dependencies]
bson = "*"
bytes = "*"
chrono = "*"
color-backtrace = { version = "*", features = ["failure-bt"] }
futures = "*"
hideout = { path = "../hideout" }
lazy_static = "*"
log = "*"
serde = "*"
tent = "*"
uuid = "*"
tokio = { version = "1", features = ["io-util", "rt", "net", "time"] }

[dependencies.mongodb]
version = "2.0.0-alpha"
default-features = false
features = ["tokio-runtime"]

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "macros", "rt", "net"] }
futures = "*"
