[package]
name = "bootstrap"
version = "0.1.0"
authors = ["inkyu <gofiri@gmail.com>"]
edition = "2018"

[dependencies]
bson = "*"
color-backtrace = { version = "*", features = ["failure-bt"] }
failure = "*"
hideout = { path = "../hideout" }
app = { path = "../app" }
log = "*"
serde = "*"
serde_yaml = "*"
tokio = { version = "*", features = ["io-util", "rt-core", "rt-util", "stream", "tcp"] }

[dependencies.mongodb]
version = "*"
default-features = false
features = ["tokio-runtime"]

[dev-dependencies]
tokio = { version = "*", features = ["io-util", "macros", "rt-core", "rt-util", "stream", "tcp"] }