[package]
name = "bootstrap"
version = "0.1.0"
authors = ["inkyu <gofiri@gmail.com>"]
edition = "2018"

[dependencies]
bson = "*"
color-backtrace = { version = "*", features = ["failure-bt"] }
hideout = { path = "../hideout" }
app = { path = "../app" }
log = "*"
serde = "*"
serde_yaml = "*"
tokio = { version = "1", features = ["io-util", "rt", "net"] }

[dependencies.mongodb]
version = "2.0.0-alpha"
default-features = false
features = ["tokio-runtime"]

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "macros", "rt", "net"] }
