[package]
name = "hideout"
version = "0.1.0"
authors = ["inkyu <gofiri@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "*"
chrono = "*"
futures = "*"
httparse = "*"
log = "*"
rand = "*"
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
sha2 = "*"
tokio = { version = "*", features = ["io-util", "rt-core", "rt-util", "stream", "tcp"] }

[dependencies.mongodb]
version = "*"
default-features = false
features = ["tokio-runtime"]

[dev-dependencies]
tokio = { version = "*", features = ["io-util", "macros", "rt-core", "rt-util", "stream", "tcp"] }