[package]
name = "hideout"
version = "0.1.0"
authors = ["inkyu <gofiri@gmail.com>"]
edition = "2021"

[dependencies]
bytes = "*"
chrono = "*"
futures = "*"
httparse = "*"
log = "*"
rand = "*"
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
ring = "*"
tokio = { version = "1", features = ["io-util", "rt", "net"] }

[dependencies.mongodb]
version = "*"
default-features = false
features = ["tokio-runtime"]

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "macros", "rt", "net"] }
